--- a/PCB/keyBoard_B/TODO.txt
+++ b/PCB/keyBoard_B/TODO.txt
@@ -7,6 +7,6 @@
 
 проверить плату
 
-добавить резисторы подтяжки
+- добавить резисторы подтяжки
 
-поменять местами fn2 alt , длинной к пробелу. или убрать мелкую
+- ? поменять местами fn2 alt , длинной к пробелу. или убрать мелкую
