--- a/PCB/keyBoard_B/ReadMe.text
+++ b/PCB/keyBoard_B/ReadMe.text
@@ -1,5 +1,9 @@
 Плата правого блока.
 
+---------------------------------------------------------------------------------------------
+В прошлой версии
+
+
 Левая сторона.  
 Пробел с r1 1x2.75 (RShift) частично торчит на другую плату.  
 С r1 1x2.25 (Lshift) чуть не достаёт до края.
