--- a/PCB/keyBoard_B/ReadMe.text
+++ b/PCB/keyBoard_B/ReadMe.text
@@ -1,5 +1,15 @@
 Плата правого блока.
 
+Правая сторона.
+
+Del позиция сохранена.
+Backspace стандартный r4 1x2.
+|u временно дополнительная клавиша, перекроется новым enter.
+Enter стандартный r2 1x2.25 , в будущем будет доклеен.
+
+RShift r1 1x1.25 (от нижнего ряда) ,
+справа от шифта |d как основная
+
 ---------------------------------------------------------------------------------------------
 В прошлой версии
 
