--- a/PCB/keyBoard_B/ReadMe.text
+++ b/PCB/keyBoard_B/ReadMe.text
@@ -1,5 +1,8 @@
 Плата правого блока.
 
+---------------------------------------------------------------------------------------------------
+версия 3
+
 Правая сторона.
 
 Del позиция сохранена.
@@ -10,9 +13,8 @@ Enter стандартный r2 1x2.25 , в будущем будет докле
 RShift r1 1x1.25 (от нижнего ряда) ,
 справа от шифта |d как основная
 
----------------------------------------------------------------------------------------------
-В прошлой версии
-
+---------------------------------------------------------------------------------------------------
+версия 2
 
 Левая сторона.  
 Пробел с r1 1x2.75 (RShift) частично торчит на другую плату.  
@@ -38,3 +40,12 @@ RShift из колпачка r2 1x2.25 (enter).
 Детали.
 Пофигисторы 49.
 
+---------------------------------------------------------------------------------------------------
+версия 1.2
+
+Поменяны местами кнопки у пробела.
+---------------------------------------------------------------------------------------------------
+версия 1
+
+Без сдвига пробела.
+Сельская разводка.
