--- a/PCB/Controller/TODO.txt
+++ b/PCB/Controller/TODO.txt
@@ -1,3 +1,13 @@
+
+
+светодиоды rx tx
+
+aref stk к земле?, через 100нф
+http://electronix.ru/forum/index.php?showtopic=68372&st=1035
+
+
+сделать отключение 32у4 от выхода хаба
+
 подключаемость контролера клавиатуры мимо хаба
 
 низ фольга
