--- a/PCB/keyBoard_A/TODO.txt
+++ b/PCB/keyBoard_A/TODO.txt
@@ -1,7 +1,14 @@
-занять 2 свободные линии.
+
+
+
+перенести элемент с линии 4 на линию 5.
+с 3 на 4.
+с 2 на 3.
+на 2 линию повесить ёльду.
++1 поставить ёльду перед 1
++2 занять 2 свободные линии.
 
 определить расположение левого ряда
 
 добавить резисторы подтяжки
 
-поставить ёльду перед 1
