--- a/PCB/Controller/TODO.txt
+++ b/PCB/Controller/TODO.txt
@@ -1,17 +1,18 @@
+п»їРІРѕР·РјРѕР¶РЅРѕ stk500 hvpp 32u4
 
-добавить кнопку сброса програматора
+РґРѕР±Р°РІРёС‚СЊ РєРЅРѕРїРєСѓ СЃР±СЂРѕСЃР° РїСЂРѕРіСЂР°РјР°С‚РѕСЂР°
 
-светодиоды rx tx
+СЃРІРµС‚РѕРґРёРѕРґС‹ rx tx
 
-aref stk к земле?, через 100нф
+aref stk Рє Р·РµРјР»Рµ?, С‡РµСЂРµР· 100РЅС„
 http://electronix.ru/forum/index.php?showtopic=68372&st=1035
 
 
-сделать отключение 32у4 от выхода хаба
+СЃРґРµР»Р°С‚СЊ РѕС‚РєР»СЋС‡РµРЅРёРµ 32Сѓ4 РѕС‚ РІС‹С…РѕРґР° С…Р°Р±Р°
 
-подключаемость контролера клавиатуры мимо хаба
+РїРѕРґРєР»СЋС‡Р°РµРјРѕСЃС‚СЊ РєРѕРЅС‚СЂРѕР»РµСЂР° РєР»Р°РІРёР°С‚СѓСЂС‹ РјРёРјРѕ С…Р°Р±Р°
 
-низ фольга
+РЅРёР· С„РѕР»СЊРіР°
 
 
 
