pcb c new progr >

--- a/PCB/keyBoard_A/ReadMe.text
+++ b/PCB/keyBoard_A/ReadMe.text
@@ -1,7 +1,10 @@
 Плата левого блока.
 
+---------------------------------------------------------------------------------------------------
+версия 2.1
 
-
+Добавлена левая Ё .
+Изменена разводка
 
 ---------------------------------------------------------------------------------------------------
 версия 2
