--- a/PCB/keyBoard_A/ReadMe.text
+++ b/PCB/keyBoard_A/ReadMe.text
@@ -1,6 +1,11 @@
 Плата левого блока.
 
 ---------------------------------------------------------------------------------------------------
+версия 2.2
+
+Вырез вместо светодиодов
+
+---------------------------------------------------------------------------------------------------
 версия 2.1
 
 Добавлена левая Ё .
@@ -11,7 +16,7 @@
 
 Пробел сдвинут влево для второй платы.
 Стрелки выровняны с доп клавишами.
-Между стрелками и LAlt модет быть или одна клавиша 1x1.25 или 2 клавиши 1x1. В первом случае CapsLock исключается.
+Между стрелками и LAlt может быть или одна клавиша 1x1.25 или 2 клавиши 1x1. В первом случае CapsLock исключается.
 ---------------------------------------------------------------------------------------------------
 версия 1
 
