--- a/PCB/Controller/TODO.txt
+++ b/PCB/Controller/TODO.txt
@@ -1,4 +1,8 @@
-﻿добавить резюки питания плат 3
+﻿
+переключатель как джампер . isp+vcc vcc+hvpp
+
+
+добавить резюки питания плат 3
 
 
 возможно stk500 hvpp 32u4
