--- a/PCB/keyBoard_A/TODO.txt
+++ b/PCB/keyBoard_A/TODO.txt
@@ -1,6 +1,13 @@
 
+определить расположение левого ряда
+
 определить нижний ряд
 
+1. уместить 3 клавиши 1,25 перед пробелом.
+курсоры при этом будут сдвинуты влево.
+первая верссия платы была более правильной.
+
+----
 возможно поменять d1 d3 на обоих платах
 
 
@@ -11,7 +18,7 @@
 +1 поставить ёльду перед 1
 +2 занять 2 свободные линии.
 
-определить расположение левого ряда
+
 
 добавить резисторы подтяжки
 
