--- a/PCB/Controller/TODO.txt
+++ b/PCB/Controller/TODO.txt
@@ -1,4 +1,6 @@
 ﻿
+кварци и их конденсаторы на нужный слой
+
 переключатель как джампер . isp+vcc vcc+hvpp
 
 
@@ -19,7 +21,8 @@ http://electronix.ru/forum/index.php?showtopic=68372&st=1035
 
 подключаемость контролера клавиатуры мимо хаба
 
-низ фольга
+низ фольга для экрана
+засиликонить разъёмы
 
 
 
